--- a/templates/home/homik.html
+++ b/templates/home/homik.html
@@ -1,13 +1,11 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Перенаправление на Вход</title>
-</head>
-<body>
-    <h1>Добро пожаловать!</h1>
-    <p>Для входа в систему нажмите на кнопку ниже:</p>
-    <form action="{% url 'login' %}" method="get">
-        <button type="submit">Перейти к странице входа</button>
-    </form>
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}Главная{% endblock %}
+
+{% block content %}
+    <div class="text-center">
+        <h1 class="mt-4">Добро пожаловать!</h1>
+        <p>Для входа в систему нажмите на кнопку ниже:</p>
+        <a href="{% url 'users:login' %}" class="btn btn-primary">Перейти к странице входа</a>
+    </div>
+{% endblock %}
