--- a/users/templates/users/logout.html
+++ b/users/templates/users/logout.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Вы успешно вышли из аккаунта</h1>
     <p>Спасибо, что воспользовались нашим сервисом!</p>
-    <a href="{% url 'login' %}">Войти снова</a>
+    <a href="{% url 'users:login' %}">Войти снова</a>
 </body>
 </html>
