--- a/users/templates/users/manage_password.html
+++ b/users/templates/users/manage_password.html
@@ -33,6 +33,6 @@
 
     <hr>
 
-    <a href="{% url 'user_profile' request.user.username %}">Назад к профилю</a>
+    <a href="{% url 'users:user_profile' request.user.username %}">Назад к профилю</a>
 </body>
 </html>
