--- a/dogs/templates/dogs/dog_list.html
+++ b/dogs/templates/dogs/dog_list.html
@@ -1,24 +1,24 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Список собак</title>
-    <!-- Подключение CSS -->
-    {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/album.css' %}">
-</head>
-<body>
-    <h1>Список всех собак</h1>
-    <a href="{% url 'dogs:create_dog' %}">Добавить новую собаку</a>
-    <ul>
-        {% for dog in dogs %}
-            <li>
-                <a href="{% url 'dogs:dog_detail' dog.pk %}">{{ dog.name }}</a> ({{ dog.breed.name }})
-            </li>
-        {% endfor %}
-    </ul>
+{% extends 'base.html' %}
 
-    <!-- Подключение JS -->
-    <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
-</body>
-</html>
+{% block title %}Список собак{% endblock %}
+
+{% block content %}
+<div class="container mt-5">
+    <h1 class="text-center mb-4">Список всех собак</h1>
+    <div class="d-flex justify-content-end mb-3">
+        <a href="{% url 'dogs:create_dog' %}" class="btn btn-primary">Добавить новую собаку</a>
+    </div>
+    {% if dogs %}
+        <div class="list-group">
+            {% for dog in dogs %}
+                <a href="{% url 'dogs:dog_detail' dog.pk %}" class="list-group-item list-group-item-action">
+                    <strong>{{ dog.name }}</strong>
+                    <span class="text-muted">({{ dog.breed.name }})</span>
+                </a>
+            {% endfor %}
+        </div>
+    {% else %}
+        <p class="text-center text-muted">Собаки отсутствуют.</p>
+    {% endif %}
+</div>
+{% endblock %}
